# izhikevichModel

./: .gitmodules  CMakeLists(For Example).txt  CMakeLists.txt  example.cpp  izhikevichModel.cpp  izhikevichParams.cpp  izhikevichParams.h  izhikevichStep.cpp  izhikevichStep.h
src/: izhikevichModel.cpp  izhikevichModel.h  izhikevichParams.cpp  izhikevichParams.h  izhikevichStep.cpp  izhikevichStep.h
